lots of styling changes

--- a/index.html
+++ b/index.html
@@ -73,9 +73,12 @@
         <div class="col-12 narrow text-center">
             <br>
             <h1>What is Hack Your Future?</h1>
-            <div class="heading-underline"></div><br>
-            <p>HackYourFuture Canada is a coding academy adapted by<a href="http://www.rcjp.ca/"> Refugee Career Jumpstart project (RCJP)</a> that teaches refugees the essential skills to start a career in the technical field. With the expansion of the IT bubble, these skills have increased in demand. 
+            <div class="heading-underline"></div>
+            <i class="fas fa-plane-departure fa-4x"></i><i class="fas fa-globe-asia fa-4x"></i><i class="fas fa-plane-arrival fa-4x"></i>
+            <br><br><p>HackYourFuture Canada is a coding academy adapted by<a href="http://www.rcjp.ca/"> Refugee Career Jumpstart project (RCJP)</a> that teaches refugees the essential skills to start a career in the technical field. With the expansion of the IT bubble, these skills have increased in demand. 
+            <br><br><i class="fas fa-hand-holding-heart fa-4x"></i></i><i class="fas fa-seedling fa-4x"></i></i>
             <br><br>3-hour classes are held once a week during the evening. We also offer extra help, or tutoring sessions during the weekends. Upon completion of the program, Resume/Cover Letter/LinkedIn/Interview workshops are held to prepare the students for the job market. Once ready, we assist our students with finding employment through our network of employers. 
+            <br><br><i class="fas fa-user-graduate fa-4x"></i>
             </p>
         </div>
     
@@ -187,7 +190,7 @@
                         <p>If you meet the basic requirements and wish to apply as a student, click the link below to fill out a form. <br>
                             We contact students individually after reviewing all applicants. We hope to see you!
                         </p>
-                        <a class="btn btn-outline-dark btn-lg" href="#Student"> Become a Student </a>
+                        <a class="btn btn-outline-dark btn-sm" href="#Student"> Become a Student </a>
                     </div>
                 </div>
                 <div class="narrow">
@@ -199,7 +202,7 @@
                             If you're interested in becoming a coach, fill out the application below. We'll be in touch with you soon. 
 
                         </p>
-                        <a class="btn btn-outline-dark btn-lg" href="#Instructor"> Become a Coach </a>
+                        <a class="btn btn-outline-dark btn-sm" href="#Instructor"> Become a Coach </a>
                     </div>
                 </div>
 
@@ -213,72 +216,126 @@
                         <h3>Our Team & Instructors</h3>
                 </div>
                 <!--Start of Team Row-->
+                <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-4">
+                        <div class="feature text-center">
+                            <img class="TeamPhoto rounded-circle" src="img/Team/Rabia Tanvir.jpeg">
+                            <h5><em>Rabia Tanvir</em></h5>
+                            <small>Education Manager</small><br>
+                            <a href="#"><i class="fas fa-envelope"></i></a>
+                            <a target="_blank" href="https://www.linkedin.com/in/rabia-tanvir/"><i class="fab fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="feature text-center">
+                            <img class="TeamPhoto rounded-circle" src="img/Team/Syeda.jpg">
+                            <h5><em>Syeda Zahra</em></h5>
+                            <small>Partnership Manager</small><br>
+                            <a href="#"><i class="fas fa-envelope"></i></a>
+                            <a target="_blank" href="https://www.linkedin.com/in/syeda-zahra-619a6b132/"><i class="fab fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                  </div>
                 <div class="row text-center">
                     <div class="col-md-3">
                         <div class="feature">
-                            <img class="TeamPhoto rounded-circle" src="img/Team/Rabia Tanvir.jpeg">
-                            <h5><em>Tabia Tanvir</em></h5>
-                            <small>Javascript Instructor</small>
-                            <small><a href="#">Linkedin.com/Harry</a></small>
+                            <img class="TeamPhoto rounded-circle" src="img/Team/Abdulazeez Abdulrazzaq.jpg">
+                            <h5><em>Abdulazeez Abdulrazzaq</em></h5>
+                            <small>Instructor</small><br>
+                            <a target="_blank" href="https://www.linkedin.com/in/abdulzeez/"><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
                 <div class="col-md-3">
                         <div class="feature">
-                            <img class="TeamPhoto rounded-circle" src="img/Team/Abdulazeez Abdulrazzaq.jpg">
-                            <h5><em>Abdulazeez Abdulrazzaq</em></h5>
-                            <small>Javascript Instructor</small>
-                            <small><a href="#">Linkedin.com/Harry</a></small>
+                            <img class="TeamPhoto rounded-circle" src="img/Team/Saad.jpg">
+                            <h5><em>Saad Ahmed</em></h5>
+                            <small>Instructor</small><br>
+                            <a target="_blank" href="https://www.linkedin.com/in/syeda-zahra-619a6b132/"><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
                 <div class="col-md-3">
                         <div class="feature">
                             <img class="TeamPhoto rounded-circle" src="img/Team/Aneesh Tarun.png">
                             <h5><em>Aneesh Tarun</em></h5>
-                            <small>Javascript Instructor</small>
-                            <small><a href="#">Linkedin.com/Harry</a></small>
+                            <small>Instructor</small><br>
+                            <a target="_blank" href="https://www.linkedin.com/in/saad-ahmed-9b9a0311b/"><i class="fab fa-linkedin"></i></a>
                         </div>
                 </div>
                 <div class="col-md-3">
                         <div class="feature">
                             <img class="TeamPhoto rounded-circle" src="img/Team/Ahmad Khaja.jpeg">
                             <h5><em>Ahmad Khaja</em></h5>
-                            <small>Javascript Instructor</small>
-                            <small><a href="#">Linkedin.com/Harry</a></small>
+                            <small>Instructor</small><br>
+                            <a target="_blank" href="https://www.linkedin.com/in/ahmad-khaja/"><i class="fab fa-linkedin"></i></a>
                         </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="feature">
+                        <img class="TeamPhoto rounded-circle" src="img/Team/Youssef.jpeg">
+                        <h5><em>Youssef Ibrahim</em></h5>
+                        <small>Instructor</small><br>
+                        <a target="_blank" href="https://www.linkedin.com/in/youssefibrahim/"><i class="fab fa-linkedin"></i></a>
+                    </div>
                 </div>
                 <div class="col-md-3">
                         <div class="feature">
                             <img class="TeamPhoto rounded-circle" src="img/Team/Elizabeth Chan.jpg">
                             <h5><em>Elizabeth Chan</em></h5>
-                            <small>Javascript Instructor</small>
-                            <small><a href="#">Linkedin.com/Harry</a></small>
+                            <small>Instructor</small><br>
+                            <a target="_blank" href="https://www.linkedin.com/in/elizabeth-pk-chan/"><i class="fab fa-linkedin"></i></a>
                         </div>
                 </div>
                 <div class="col-md-3">
                         <div class="feature">
                             <img class="TeamPhoto rounded-circle" src="img/Team/Jialun Chen.png">
                             <h5><em>Jialun Chen</em></h5>
-                            <small>Javascript Instructor</small>
-                            <small><a href="#">Linkedin.com/Harry</a></small>
+                            <small>Instructor</small><br>
+                            <a target="_blank" href="https://www.linkedin.com/in/jialun-chen-98453899/"><i class="fab fa-linkedin"></i></a>
                         </div>
                 </div>
                 <div class="col-md-3">
                         <div class="feature">
                             <img class="TeamPhoto rounded-circle" src="img/Team//Mohannad Bakkar.jpg">
                             <h5><em>Mohammad Bakkar</em></h5>
-                            <small>Javascript Instructor</small>
-                            <small><a href="#">Linkedin.com/Harry</a></small>
+                            <small>Instructor</small><br>
+                            <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
                         </div>
                 </div>
                 <div class="col-md-3">
                         <div class="feature">
                             <img class="TeamPhoto rounded-circle" src="img/Team/Rajaie AlKorani.png">
                             <h5><em>Rajaie Alkorani</em></h5>
-                            <small>Javascript Instructor</small>
-                            <small><a href="#">Linkedin.com/Harry</a></small>
+                            <small>Instructor</small><br>
+                            <a target="_blank" href="https://www.linkedin.com/in/ralkorani/"><i class="fab fa-linkedin"></i></a>
                         </div>
                 </div>
+                <div class="col-md-3">
+                    <div class="feature">
+                        <img class="TeamPhoto rounded-circle" src="img/Team/default.png">
+                        <h5><em>Ishan Sharma</em></h5>
+                        <small>Teaching Assistant</small><br>
+                        <a target="_blank" href="https://www.linkedin.com/in/i-sharma/"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="feature">
+                        <img class="TeamPhoto rounded-circle" src="img/Team/default.png">
+                        <h5><em>Tabish Sheikh</em></h5>
+                        <small>Teaching Assistant</small><br>
+                        <a target="_blank" href="https://www.linkedin.com/in/shaikh-tabish/"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="feature">
+                        <img class="TeamPhoto rounded-circle" src="img/Team/default.png">
+                        <h5><em>Uzair Mayat</em></h5>
+                        <small>Teaching Assistant</small><br>
+                        <a target="_blank" href="https://www.linkedin.com/in/uzairmayat/"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
                 </div><br><!--End of Team Row-->
+                </div>
 
         </div>
 
@@ -354,7 +411,7 @@
                 Our students are taught to write clean code and learn to solve problems efficiently. 
                 Tell us about your hiring needs, and one of our graduates may suit the role. 
             </p>
-            <a style="margin:25px;" class="btn btn-outline-dark btn-lg" href="#Student"> Support us </a>
+            <a style="margin:25px;" class="btn btn-outline-dark btn-sm" href="#Student"> Support us </a>
  
             </div> <!-- end of become a partner-->
 
@@ -363,7 +420,7 @@
                 <p>               
                     Become a partner of HackYourFuture Canada by visiting the link below
                 </p>
-                <a style="margin:25px;" class="btn btn-outline-dark btn-lg" href="#Student"> Donate </a>
+                <a style="margin:25px;" class="btn btn-outline-dark btn-sm" href="#Student"> Donate </a>
             </div>
         </div>
 
@@ -382,7 +439,7 @@
                 <input class="form-control" type="text" name="Email" placeholder="E-mail Address"><br><br>
                 <label>Message</label>
                 <input style="height: 200px" class="form-control" type="text" name="Email" placeholder="">
-                <a style="margin:25px;" class="btn btn-outline-dark btn-lg" href="#Student"> Submit </a>
+                <a style="margin:25px;" class="btn btn-outline-dark btn-sm" href="#Student"> Submit </a>
 
             </form>
         </div>
@@ -397,9 +454,9 @@
         <div id="Contact" class="row justify-content-center" >
             <div class="col-md-5 text-center">
                 <img src="img/HYFCanada.png">
-                <p>HackYourFuture Canada<br><br>
-                    <strong>Contact info</strong>
-                    <p>(555) 555 - 5555 <br> hyfcanada@live.ca</p>
+                <p>HackYourFuture Canada<br>
+                    <hr>
+                    <p>hyfcanada@live.ca</p>
                 
                 </p>
             </div>
