--- a/index.html
+++ b/index.html
@@ -352,7 +352,8 @@
             </div>
             <!-- Start of Company Row-->
             <div class="row text-center">
-                <div style="border-color: black" class="col-md-4">
+
+                <div style="border-color: black" class="col-md-3">
                         <div class="card" style="width: 18rem;">
                             <img src="/img/td-bank-1-logo.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -365,7 +366,8 @@
                             </div>
                         </div> 
                 </div>
-                <div style="border-color: black" class="col-md-4">
+
+                <div style="border-color: black" class="col-md-3">
                         <div class="card" style=" width: 18rem;">
                             <img style="padding: 25px" src="/img/MMLogo.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -378,7 +380,8 @@
                             </div>
                         </div> 
                 </div>
-                <div style="border-color: black" class="col-md-4">
+
+                <div style="border-color: black" class="col-md-3">
                         <div class="card" style="width: 18rem;">
                             <img style="padding-top: 20px" src="/img/RBClogo2.jpg" class="card-img-top" alt="...">
                             <div class="card-body"><br><br>
@@ -391,6 +394,21 @@
                             </div>
                         </div> 
                 </div>
+
+                <div style="border-color: black" class="col-md-3">
+                    <div class="card" style="width: 18rem;">
+                        <img style="padding-top: 20px" src="/img/RBClogo2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body"><br><br>
+                            <h4 class="card-title">RBC Bank</h4>
+                            <p class="card-text">
+                                    RBC is committed to helping clients thrive and communities prosper, supporting
+                                     initiatives that make an impact on society.<br><br>
+                            </p>
+                            <a target="_blank" href="https://www.rbc.com/canada.html" class="btn btn-outline-dark btn-md">Go to Website</a>
+                        </div>
+                    </div> 
+            </div>
+
             </div> <!-- End of Company Row-->
         </div> <!-- End of Jumbotron-->
 
@@ -435,10 +453,10 @@
             <div class="heading-underline"></div><br><br>
             <form action="">
                 <label>Contact Information</label>
-                <input class="form-control" type="text" name="Name" placeholder="Name"><br>
-                <input class="form-control" type="text" name="Email" placeholder="E-mail Address"><br><br>
+                <input class="form-control" type="text" action="contact.php" name="name" placeholder="Name"><br>
+                <input class="form-control" type="text" action="contact.php" name="nmail" placeholder="E-mail Address"><br><br>
                 <label>Message</label>
-                <input style="height: 200px" class="form-control" type="text" name="Email" placeholder="">
+                <input style="height: 200px" class="form-control" type="text" action="contact.php" name="Email" placeholder="">
                 <a style="margin:25px;" class="btn btn-outline-dark btn-sm" href="#Student"> Submit </a>
 
             </form>
