adding new js stuff

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <i class="fas fa-plane-departure fa-4x"></i><i class="fas fa-globe-asia fa-4x"></i><i class="fas fa-plane-arrival fa-4x"></i>
             <br><br><p>HackYourFuture Canada is a coding academy adapted by<a href="http://www.rcjp.ca/"> Refugee Career Jumpstart project (RCJP)</a> that teaches refugees the essential skills to start a career in the technical field. With the expansion of the IT bubble, these skills have increased in demand. 
             <br><br><i class="fas fa-hand-holding-heart fa-4x"></i></i><i class="fas fa-seedling fa-4x"></i></i>
-            <br><br>3-hour classes are held once a week during the evening. We also offer extra help, or tutoring sessions during the weekends. Upon completion of the program, Resume/Cover Letter/LinkedIn/Interview workshops are held to prepare the students for the job market. Once ready, we assist our students with finding employment through our network of employers. 
+            <br><br>3-hour classes are held twice a week during the evening. We also offer extra help, or tutoring sessions during the weekends. Upon completion of the program, Resume/Cover Letter/LinkedIn/Interview workshops are held to prepare the students for the job market. Once ready, we assist our students with finding employment through our network of employers. 
             <br><br><i class="fas fa-user-graduate fa-4x"></i>
             </p>
         </div>
@@ -190,7 +190,10 @@
                         <p>If you meet the basic requirements and wish to apply as a student, click the link below to fill out a form. <br>
                             We contact students individually after reviewing all applicants. We hope to see you!
                         </p>
-                        <a class="btn btn-outline-dark btn-sm" href="#Student"> Become a Student </a>
+                        <a class="btn btn-outline-dark btn-sm" href="#Student" onclick="showDiv()"> Become a Student </a>
+                        <div id="comingSoon" class="container Coming" style="display:none;">
+                            <h3>Coming Soon!</h3>
+                        </div>
                     </div>
                 </div>
                 <div class="narrow">
@@ -202,7 +205,7 @@
                             If you're interested in becoming a coach, fill out the application below. We'll be in touch with you soon. 
 
                         </p>
-                        <a class="btn btn-outline-dark btn-sm" href="#Instructor"> Become a Coach </a>
+                        <a class="btn btn-outline-dark btn-sm" href="#Instructor" onclick="buttonPress()"> Become a Coach </a>
                     </div>
                 </div>
 
@@ -242,79 +245,69 @@
                         <div class="feature">
                             <img class="TeamPhoto rounded-circle" src="img/Team/Abdulazeez Abdulrazzaq.jpg">
                             <h5><em>Abdulazeez Abdulrazzaq</em></h5>
-                            <small>Instructor</small><br>
                             <a target="_blank" href="https://www.linkedin.com/in/abdulzeez/"><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
                 <div class="col-md-3">
-                        <div class="feature">
-                            <img class="TeamPhoto rounded-circle" src="img/Team/Saad.jpg">
-                            <h5><em>Saad Ahmed</em></h5>
-                            <small>Instructor</small><br>
-                            <a target="_blank" href="https://www.linkedin.com/in/syeda-zahra-619a6b132/"><i class="fab fa-linkedin"></i></a>
-                        </div>
+                    <div class="feature">
+                        <img class="TeamPhoto rounded-circle" src="img/Team/Saad.jpg">
+                        <h5><em>Saad Ahmed</em></h5>
+                        <a target="_blank" href="https://www.linkedin.com/in/saad-ahmed-9b9a0311b/"><i class="fab fa-linkedin"></i></a>
                     </div>
-                <div class="col-md-3">
-                        <div class="feature">
-                            <img class="TeamPhoto rounded-circle" src="img/Team/Aneesh Tarun.png">
-                            <h5><em>Aneesh Tarun</em></h5>
-                            <small>Instructor</small><br>
-                            <a target="_blank" href="https://www.linkedin.com/in/saad-ahmed-9b9a0311b/"><i class="fab fa-linkedin"></i></a>
-                        </div>
                 </div>
                 <div class="col-md-3">
-                        <div class="feature">
-                            <img class="TeamPhoto rounded-circle" src="img/Team/Ahmad Khaja.jpeg">
-                            <h5><em>Ahmad Khaja</em></h5>
-                            <small>Instructor</small><br>
-                            <a target="_blank" href="https://www.linkedin.com/in/ahmad-khaja/"><i class="fab fa-linkedin"></i></a>
-                        </div>
+                    <div class="feature">
+                        <img class="TeamPhoto rounded-circle" src="img/Team/Rajaie AlKorani.png">
+                        <h5><em>Rajaie Alkorani</em></h5>
+                        <a target="_blank" href="https://www.linkedin.com/in/ralkorani/"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="feature">
+                        <img class="TeamPhoto rounded-circle" src="img/Team//Mohannad Bakkar.jpg">
+                        <h5><em>Mohammad Bakkar</em></h5>
+                        <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="feature">
+                        <img class="TeamPhoto rounded-circle" src="img/Team/Elizabeth Chan.jpg">
+                        <h5><em>Elizabeth Chan</em></h5>
+                        <a target="_blank" href="https://www.linkedin.com/in/elizabeth-pk-chan/"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="feature">
+                        <img class="TeamPhoto rounded-circle" src="img/Team/Jialun Chen.png">
+                        <h5><em>Jialun Chen</em></h5>
+                        <a target="_blank" href="https://www.linkedin.com/in/jialun-chen-98453899/"><i class="fab fa-linkedin"></i></a>
+                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="feature">
                         <img class="TeamPhoto rounded-circle" src="img/Team/Youssef.jpeg">
                         <h5><em>Youssef Ibrahim</em></h5>
-                        <small>Instructor</small><br>
                         <a target="_blank" href="https://www.linkedin.com/in/youssefibrahim/"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
                 <div class="col-md-3">
-                        <div class="feature">
-                            <img class="TeamPhoto rounded-circle" src="img/Team/Elizabeth Chan.jpg">
-                            <h5><em>Elizabeth Chan</em></h5>
-                            <small>Instructor</small><br>
-                            <a target="_blank" href="https://www.linkedin.com/in/elizabeth-pk-chan/"><i class="fab fa-linkedin"></i></a>
-                        </div>
-                </div>
-                <div class="col-md-3">
-                        <div class="feature">
-                            <img class="TeamPhoto rounded-circle" src="img/Team/Jialun Chen.png">
-                            <h5><em>Jialun Chen</em></h5>
-                            <small>Instructor</small><br>
-                            <a target="_blank" href="https://www.linkedin.com/in/jialun-chen-98453899/"><i class="fab fa-linkedin"></i></a>
-                        </div>
-                </div>
-                <div class="col-md-3">
-                        <div class="feature">
-                            <img class="TeamPhoto rounded-circle" src="img/Team//Mohannad Bakkar.jpg">
-                            <h5><em>Mohammad Bakkar</em></h5>
-                            <small>Instructor</small><br>
-                            <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
-                        </div>
-                </div>
-                <div class="col-md-3">
-                        <div class="feature">
-                            <img class="TeamPhoto rounded-circle" src="img/Team/Rajaie AlKorani.png">
-                            <h5><em>Rajaie Alkorani</em></h5>
-                            <small>Instructor</small><br>
-                            <a target="_blank" href="https://www.linkedin.com/in/ralkorani/"><i class="fab fa-linkedin"></i></a>
-                        </div>
+                    <div class="feature">
+                        <img class="TeamPhoto rounded-circle" src="img/Team/Ahmad Khaja.jpeg">
+                        <h5><em>Ahmad Khaja</em></h5>
+                        <a target="_blank" href="https://www.linkedin.com/in/ahmad-khaja/"><i class="fab fa-linkedin"></i></a>
+                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="feature">
                         <img class="TeamPhoto rounded-circle" src="img/Team/default.png">
+                        <h5><em>Uzair Mayat</em></h5>
+                        <a target="_blank" href="https://www.linkedin.com/in/uzairmayat/"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="feature">
+                        <img class="TeamPhoto rounded-circle" src="img/Team/Ishan.jpg">
                         <h5><em>Ishan Sharma</em></h5>
-                        <small>Teaching Assistant</small><br>
                         <a target="_blank" href="https://www.linkedin.com/in/i-sharma/"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
@@ -322,17 +315,15 @@
                     <div class="feature">
                         <img class="TeamPhoto rounded-circle" src="img/Team/default.png">
                         <h5><em>Tabish Sheikh</em></h5>
-                        <small>Teaching Assistant</small><br>
                         <a target="_blank" href="https://www.linkedin.com/in/shaikh-tabish/"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="feature">
-                        <img class="TeamPhoto rounded-circle" src="img/Team/default.png">
-                        <h5><em>Uzair Mayat</em></h5>
-                        <small>Teaching Assistant</small><br>
-                        <a target="_blank" href="https://www.linkedin.com/in/uzairmayat/"><i class="fab fa-linkedin"></i></a>
-                    </div>
+                        <div class="feature">
+                            <img class="TeamPhoto rounded-circle" src="img/Team/Aneesh Tarun.png">
+                            <h5><em>Aneesh Tarun</em></h5>
+                            <a target="_blank" href="https://www.linkedin.com/in/saad-ahmed-9b9a0311b/"><i class="fab fa-linkedin"></i></a>
+                        </div>
                 </div>
                 </div><br><!--End of Team Row-->
                 </div>
@@ -351,21 +342,7 @@
                     <div class="heading-underline"></div><br><br>
             </div>
             <!-- Start of Company Row-->
-            <div class="row text-center">
-
-                <div style="border-color: black" class="col-md-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="/img/td-bank-1-logo.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h4 class="card-title">TD Bank</h4>
-                                <p class="card-text">
-                                        TD Bank, America's Most Convenient Bank®, has provided 
-                                        unparalleled convenience and legendary customer service for more than 150 years.
-                                </p>
-                                <a target="_blank" href="https://www.td.com/ca/en/personal-banking/" class="btn btn-outline-dark btn-md">Go to Website</a>
-                            </div>
-                        </div> 
-                </div>
+            <div class="Companies row text-center">
 
                 <div style="border-color: black" class="col-md-3">
                         <div class="card" style=" width: 18rem;">
@@ -395,20 +372,6 @@
                         </div> 
                 </div>
 
-                <div style="border-color: black" class="col-md-3">
-                    <div class="card" style="width: 18rem;">
-                        <img style="padding-top: 20px" src="/img/RBClogo2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body"><br><br>
-                            <h4 class="card-title">RBC Bank</h4>
-                            <p class="card-text">
-                                    RBC is committed to helping clients thrive and communities prosper, supporting
-                                     initiatives that make an impact on society.<br><br>
-                            </p>
-                            <a target="_blank" href="https://www.rbc.com/canada.html" class="btn btn-outline-dark btn-md">Go to Website</a>
-                        </div>
-                    </div> 
-            </div>
-
             </div> <!-- End of Company Row-->
         </div> <!-- End of Jumbotron-->
 
@@ -434,7 +397,7 @@
             </div> <!-- end of become a partner-->
 
             <div id="Support">
-                <h3> Send a Donation </h3>
+                <h3> Support Us </h3>
                 <p>               
                     Become a partner of HackYourFuture Canada by visiting the link below
                 </p>
@@ -474,7 +437,7 @@
                 <img src="img/HYFCanada.png">
                 <p>HackYourFuture Canada<br>
                     <hr>
-                    <p>hyfcanada@live.ca</p>
+                    <p>hackyourfuture@rcjp.ca</p>
                 
                 </p>
             </div>
@@ -484,6 +447,8 @@
     <!-- end of footer-->
 
       <!-- Script Source Files -->
+      <script src="/js/index.js">
+      </script>
       <script src="js/jquery-3.3.1.min.js"></script>
       <script src="bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
       <script src="https://use.fontawesome.com/releases/v5.6.3/js/all.js"></script>
